<resources>
    <string name="app_name">My Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="reski_mulud_muchamad">Reski Mulud Muchamad</string>
    <string name="reski.mulud_gmail">reski.mulud@gmail.com</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_cart_fragment">This is Cart Fragment</string>
    <string name="this_is_maps_activity">This is Maps Activity</string>
</resources>